<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.DescriptionFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/description_image_cardView"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/description_place_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/icon_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/description_icon_back_bg"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingVertical="8dp"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                app:drawableTopCompat="@drawable/icon_back" />

            <androidx.cardview.widget.CardView
                android:id="@+id/description_icon_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="20dp"
                android:visibility="gone"
                android:layout_marginStart="370dp"
                android:layout_marginTop="210dp"
                >

                <ImageView
                    android:id="@+id/icon_like_black"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_favorite_black"/>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/icon_like_red"
                android:layout_width="25dp"
                android:visibility="visible"
                android:layout_height="25dp"
                android:layout_marginStart="370dp"
                android:layout_marginTop="210dp"
                android:src="@drawable/icon_heart_red"/>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/description_title"
            android:layout_width="290dp"
            android:gravity="center|start"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            tools:text="Фотостудия автопортрета «Сам снимай»"
            app:layout_constraintTop_toBottomOf="@id/description_image_cardView"
            app:layout_constraintStart_toStartOf="@id/description_image_cardView"
            />

        <TextView
            android:id="@+id/count_favorite"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_title"
            app:layout_constraintStart_toStartOf="@id/description_title"
            android:fontFamily="@font/circular"
            android:gravity="center"
            tools:text="432"
            app:drawableStartCompat="@drawable/outline_favorite_border_24" />

        <TextView
            android:id="@+id/content_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/count_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Это фотостудия нового формата, где нет фотографа, а все снимки делают сами гости. Камера находится за большим зеркалом, гости управляют съёмкой с помощью пульта. Свет и камера настроены профессионалами для получения отличных кадров, при этом в зале находитесь только вы и те, с кем вы хотите фотографироваться."
            android:fontFamily="@font/circular"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:lineSpacingExtra="3sp"
            />

        <TextView
            android:id="@+id/place_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_gallery"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginStart="10dp"
            android:textSize="18sp"

            app:layout_constraintTop_toBottomOf="@id/content_description"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/description_view_pager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/description_viewpager_bg"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/place_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/description_information"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/description_view_pager"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/information"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/address"/>


        <TextView
            android:id="@+id/place_address"
            android:layout_width="180dp"
            android:gravity="start|center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintStart_toStartOf="@id/address"
            tools:text="Кожевенная линия, д. 30"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:drawablePadding="3dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/subway_name"
            app:layout_constraintStart_toStartOf="@id/subway_name"
            android:text="@string/site"
            app:drawableStartCompat="@drawable/icon_browser" />


        <TextView
            android:id="@+id/place_site"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/site"
            app:layout_constraintStart_toStartOf="@id/site"
            tools:text="brusnitsyn.spb.ru"
            android:fontFamily="@font/circular"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/place_address"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/timetable"/>

        <TextView
            android:id="@+id/place_schedule"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/schedule"
            app:layout_constraintStart_toStartOf="@id/address"
            tools:text="ежедневно 10:00–0:00"
            android:gravity="start|center"
            android:fontFamily="@font/circular"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/subway"
            app:drawableStartCompat="@drawable/saint_petersburg_metro_logo"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/place_schedule"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/subway"/>

        <TextView
            android:id="@+id/subway_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/subway"
            app:layout_constraintStart_toStartOf="@id/address"

            android:layout_marginBottom="10dp"
            tools:text="ежедневно 10:00–0:00"
            android:gravity="start|center"
            android:fontFamily="@font/circular"
            android:layout_marginTop="2dp"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_site_btn"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/place_site"
            app:layout_constraintTop_toBottomOf="@id/place_site"
            android:paddingStart="3dp"
            android:paddingEnd="5dp"
            android:drawableStart="@drawable/icon_chrome"
            android:elevation="10dp"
            android:shadowColor="@color/black"
            android:textAllCaps="false"
            android:background="@drawable/go_to_placesite_btn_bg"
            android:fontFamily="@font/circular"
            android:text="@string/go_site"/>

        <TextView
            android:id="@+id/open_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular"
            android:textSize="13sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/go_site_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/show_place_on_map"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/showMapBtn"
            android:layout_width="match_parent"
            app:cardElevation="15dp"
            app:cardCornerRadius="20dp"
            android:layout_height="180dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/open_map"
            app:layout_constraintStart_toStartOf="@id/open_map"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/map_image"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


